<resources>
    <string name="app_name">Mushroom Classify</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Float</item>
        <item>Quantized</item>
    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="mushroom_img">The Image for the mushroom</string>
    <string name="back">Back</string>
    <string name="view_info">View Info</string>
</resources>
