<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11ffffff">

    <ScrollView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/free_dialog_bg"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textColor="#38ADFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/description_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="#E4E4E4" />



            <ImageView
                android:id="@+id/exampleimg"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/mushroom_img"
                app:srcCompat="@mipmap/ic_launcher" />
            <Button
                android:id="@+id/return_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
